Fixed minor view collapse after master pull
ブランチ作成後のマスターの変更をプルした後に、軽微なビューの崩れがあったため修正

--- a/app/assets/stylesheets/devise/_new_address.scss
+++ b/app/assets/stylesheets/devise/_new_address.scss
@@ -65,6 +65,15 @@
         padding-left: 10px;
       }
 
+      select {
+        display: block;
+        width: 315px;
+        height: 40px;
+        margin: 0 auto 10px;
+        padding-left: 10px;
+        background-color: white;
+      }
+
       .address {
         display: block;
         width: 315px;
